--- a/src/app/explorer/explorer.component.html
+++ b/src/app/explorer/explorer.component.html
@@ -22,16 +22,20 @@
               <table class="table table-striped">
                 <thead>
                 <tr>
-                  <th scope="col">ID</th>
+                  <th scope="col">Event ID</th>
+                  <th scope="col"></th>
+                  <th scope="col">Target agreement</th>
                   <th scope="col">Event Type</th>
                   <th scope="col">Timestamp</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let event of recent_events" style="cursor: pointer" (click)="explore_address(event.event_id)">
-                  <th scope="row">{{event.event_id}}</th>
-                  <td>{{event.event_type}}</td>
-                  <td>{{event.timestamp}}</td>
+                <tr *ngFor="let event of recent_events">
+                  <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
+                  <td scope="row"><span class="glyphicon glyphicon-arrow-right"></span></td>
+                  <td scope="row"> <a (click)="explore_address(event.target_agreement)">{{event.target_agreement}}</a></td>
+                  <td scope="row">{{event.event_type}}</td>
+                  <td scope="row">{{event.timestamp}}</td>
                 </tr>
                 </tbody>
               </table>
@@ -48,16 +52,16 @@
               <table class="table table-striped">
                 <thead>
                 <tr>
-                  <th scope="col">ID</th>
+                  <th scope="col">Agreement ID</th>
                   <th scope="col">State</th>
                   <th scope="col">Timestamp</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let agreement of recent_agreements" style="cursor: pointer" (click)="explore_address(agreement.agreement_id)">
-                  <th scope="row">{{agreement.agreement_id}}</th>
-                  <td>{{agreement.state}}</td>
-                  <td>{{agreement.date_created}}</td>
+                <tr *ngFor="let agreement of recent_agreements">
+                  <td scope="row"><a (click)="explore_address(agreement.agreement_id)">{{agreement.agreement_id}}</a></td>
+                  <td scope="row">{{agreement.state}}</td>
+                  <td scope="row">{{agreement.date_created}}</td>
                 </tr>
                 </tbody>
               </table>
@@ -69,9 +73,32 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info" *ngIf="address_type != null">
-            <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}}</strong></h4>
-            <pre>"address_type": {{address_type}}</pre>
+            <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}} </strong> <em *ngIf="address_type == 'EVENT'"><span class="glyphicon glyphicon-arrow-right"></span>
+            <a (click)="explore_address(address_payload.payload.agreement_id)">0x{{address_payload.payload.agreement_id}}</a></em></h4>
+            <pre>"address_type": {{address_type | json}}</pre>
             <pre>{{address_payload | json}}</pre>
+            <div *ngIf="address_type == 'AGREEMENT'">
+              <hr>
+              <h4><strong><span class="glyphicon glyphicon-list-alt"></span> Associated events</strong></h4>
+              <div class="tb">
+                <table class="table table-striped">
+                  <thead>
+                  <tr>
+                    <th scope="col">Event ID</th>
+                    <th scope="col">Event Type</th>
+                    <th scope="col">Timestamp</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let event of address_events">
+                    <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
+                    <td scope="row">{{event.event_type}}</td>
+                    <td scope="row">{{event.timestamp}}</td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
           </div>
           <div class="alert alert-info" *ngIf="address_type == null && address != null">
             <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}}</strong></h4>
