--- a/src/app/agreement/agreement.component.html
+++ b/src/app/agreement/agreement.component.html
@@ -1,19 +1,17 @@
 <div class="container" xmlns="http://www.w3.org/1999/html">
   <div class="row">
-    <div class="col-lg-12" align="center">
-      <div class="alert alert-info">
-        <h3><strong><span class="glyphicon glyphicon-globe"></span> Agreement {{agreement_id}}</strong></h3>
-      </div>
+    <div class="col-lg-12" style="margin-bottom: 7px">
+      <h3><strong>Details of agreement <a (click)="explore_address(agreement_id)">0x{{agreement_id}}</a></strong></h3>
     </div>
   </div>
   <div class="row" *ngIf="item_agreement_params?.buyer_id == global.globalvars.account_logged_in && item_agreement_params?.state == 'DELIVERED'">
-    <div class="col-lg-12" align="center">
+    <div class="col-lg-12 form-group" align="center">
       <button class="btn btn-success action_but" (click)="acceptItem()"><span class="glyphicon glyphicon-ok"></span> I am satisfied with the condition of goods</button>
       <button class="btn btn-danger action_but" (click)="rejectItem()"><span class="glyphicon glyphicon-remove"></span> I am not satisfied with the condition of the goods</button>
     </div>
   </div>
   <div class="row" *ngIf="item_agreement_params?.seller_id == global.globalvars.account_logged_in && item_agreement_params?.state == 'RETURNED'">
-    <div class="col-lg-12" align="center">
+    <div class="col-lg-12 form-group" align="center">
       <button class="btn btn-success action_but" (click)="acceptReturn()"><span class="glyphicon glyphicon-ok"></span> I am satisfied with the condition of return</button>
       <button class="btn btn-danger action_but" (click)="rejectReturn()"><span class="glyphicon glyphicon-remove"></span> I am not satisfied with the condition of the return</button>
     </div>
@@ -21,7 +19,7 @@
   <div *ngIf="item_agreement_params?.violation == true" class="row">
     <div class="col-lg-12">
       <div class="alert alert-danger">
-        <p><strong><span class="glyphicon glyphicon-remove-circle"></span> NOTE: Terms were violated during the transfer</strong></p>
+        <p><strong><span class="glyphicon glyphicon-warning-sign"></span> NOTE: Terms were violated during the transfer</strong></p>
       </div>
     </div>
   </div>
@@ -65,7 +63,7 @@
     </div>
   </div>
 
-  <div *ngIf="item_agreement_params?.state != 'LOCKED'">
+  <div *ngIf="item_agreement_params?.state != 'LOCKED' && item_agreement_params?.state != 'CLERK'">
     <div class="row">
       <div class="col-lg-12">
         <div class="alert alert-info">
@@ -135,5 +133,28 @@
       </div>
     </div>
   </div>
-</div>
 
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="tb">
+        <table class="table table-striped">
+          <thead>
+          <tr>
+            <th scope="col">Associated event ID</th>
+            <th scope="col">Event Type</th>
+            <th scope="col">Timestamp</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let event of agreement_events">
+            <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
+            <td scope="row">{{event.event_type}}</td>
+            <td scope="row">{{event.timestamp}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+</div>
