--- a/src/app/explorer/explorer.component.html
+++ b/src/app/explorer/explorer.component.html
@@ -4,81 +4,73 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3>Search events, agreements, users, etc.</h3>
-            <div class="form-group input-group">
-              <input type="text" class="form-control" placeholder="Enter address here..." [(ngModel)]="address_search">
-              <span class="input-group-btn"><button class="btn btn-default" type="button" (click)="explore_address(address_search)"><span class="glyphicon glyphicon-search"></span></button></span>
-            </div>
+          <div class="form-group input-group">
+            <input type="text" class="form-control" placeholder="Enter address here..." [(ngModel)]="address_search">
+            <span class="input-group-btn"><button class="btn btn-default" type="button" (click)="explore_address(address_search)"><span class="glyphicon glyphicon-search"></span></button></span>
           </div>
         </div>
       </div>
 
       <div class="row" *ngIf="address == null">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3>Recent events</h3>
-            <div class="tb">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th scope="col">Event ID</th>
-                  <th scope="col"></th>
-                  <th scope="col">Target agreement</th>
-                  <th scope="col">Event Type</th>
-                  <th scope="col">Timestamp</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let event of recent_events">
-                  <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
-                  <td scope="row"><span class="glyphicon glyphicon-arrow-right"></span></td>
-                  <td scope="row"> <a (click)="explore_address(event.target_agreement)">{{event.target_agreement}}</a></td>
-                  <td scope="row">{{event.event_type}}</td>
-                  <td scope="row">{{event.timestamp}}</td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
+          <h3>Recent events</h3>
+          <div class="tb">
+            <table class="table table-striped">
+              <thead>
+              <tr>
+                <th scope="col">Event ID</th>
+                <th scope="col"></th>
+                <th scope="col">Target agreement</th>
+                <th scope="col">Event Type</th>
+                <th scope="col">Timestamp</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let event of recent_events">
+                <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
+                <td scope="row"><span class="glyphicon glyphicon-arrow-right"></span></td>
+                <td scope="row"> <a (click)="explore_address(event.target_agreement)">{{event.target_agreement}}</a></td>
+                <td scope="row">{{event.event_type}}</td>
+                <td scope="row">{{event.timestamp}}</td>
+              </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
 
       <div class="row" *ngIf="address == null">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3>Recent agreements</h3>
-            <div class="tb">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th scope="col">Agreement ID</th>
-                  <th scope="col">State</th>
-                  <th scope="col">Timestamp</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let agreement of recent_agreements">
-                  <td scope="row"><a (click)="explore_address(agreement.agreement_id)">{{agreement.agreement_id}}</a></td>
-                  <td scope="row">{{agreement.state}}</td>
-                  <td scope="row">{{agreement.date_created}}</td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
+          <h3>Recent agreements</h3>
+          <div class="tb">
+            <table class="table table-striped">
+              <thead>
+              <tr>
+                <th scope="col">Agreement ID</th>
+                <th scope="col">State</th>
+                <th scope="col">Timestamp</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let agreement of recent_agreements">
+                <td scope="row"><a (click)="explore_address(agreement.agreement_id)">{{agreement.agreement_id}}</a></td>
+                <td scope="row">{{agreement.state}}</td>
+                <td scope="row">{{agreement.date_created}}</td>
+              </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info" *ngIf="address_type != null">
+          <div *ngIf="address_type != null">
             <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}} </strong> <em *ngIf="address_type == 'EVENT'"><span class="glyphicon glyphicon-arrow-right"></span>
             <a (click)="explore_address(address_payload.payload.agreement_id)">0x{{address_payload.payload.agreement_id}}</a></em></h4>
             <pre>"address_type": {{address_type | json}}</pre>
             <pre>{{address_payload | json}}</pre>
-            <div *ngIf="address_type == 'AGREEMENT'">
-              <hr>
+            <div *ngIf="address_type == 'AGREEMENT'" style="margin-top: 20px">
               <h4><strong><span class="glyphicon glyphicon-list-alt"></span> Associated events</strong></h4>
               <div class="tb">
                 <table class="table table-striped">
@@ -100,41 +92,12 @@
               </div>
             </div>
           </div>
-          <div class="alert alert-info" *ngIf="address_type == null && address != null">
+          <div *ngIf="address_type == null && address != null">
             <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}}</strong></h4>
             <pre>"address_type": UNDEFINED</pre>
           </div>
         </div>
       </div>
-
-      <!--<div class="row" *ngIf="address == null">
-        <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3>Recent terms</h3>
-            <div class="tb">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col">Agreement</th>
-                  <th scope="col">Timestamp</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let terms of recent_terms" style="cursor: pointer">
-                  <th scope="row">{{terms.terms_id}}</th>
-                  <td>{{terms.agreement_id}}</td>
-                  <td>{{terms.timestamp}}</td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-        </div>
-      </div>-->
-
-
-
     </div>
   </div>
 </div>
