--- a/src/app/item-browser/item-browser.component.html
+++ b/src/app/item-browser/item-browser.component.html
@@ -4,12 +4,9 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <h3>Items for sale</h3>
-            <div class="form-group input-group">
-              <input type="text" class="form-control" placeholder="Type here...">
-              <span class="input-group-btn"><button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
-            </div>
+          <div class="form-group input-group">
+            <input type="text" class="form-control" placeholder="Search items...">
+            <span class="input-group-btn"><button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button></span>
           </div>
         </div>
       </div>
