--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -51,13 +51,11 @@
 
       <div class="row">
         <div class="col-lg-12">
-          <div class="alert alert-info">
-            <div class="form-group">
-              <button [disabled]="item_terms.length === 1" class="btn btn-default form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms.length === 1}">View proposals ({{item_terms.length-1}})</button>
-            </div>
-            <div class="form-group">
-              <button [disabled]="item_agreement_params.seller_id == global.globalvars.account_logged_in" class="btn btn-default form-control" data-toggle="modal" data-target="#proposalModal" [ngClass]="{'disabled': item_agreement_params.seller_id == global.globalvars.account_logged_in}">Make a proposal</button>
-            </div>
+          <div class="form-group">
+            <button [disabled]="item_terms.length === 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms.length === 1}">View proposals <span class="label label-info">{{item_terms.length-1}}</span></button>
+          </div>
+          <div class="form-group">
+            <button [disabled]="item_agreement_params.seller_id == global.globalvars.account_logged_in || global.globalvars.account_logged_in == null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal" [ngClass]="{'disabled': item_agreement_params.seller_id == global.globalvars.account_logged_in || global.globalvars.account_logged_in == null}">Make a proposal</button>
           </div>
         </div>
       </div>
