--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,9 +5,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
-            <h3 align="center"><strong>Existing users</strong></h3><hr>
             <div class="row">
               <div class="col-lg-12">
+                <h4><strong>Existing users</strong></h4>
                 <div class="form-group input-group">
                   <span class="input-group-btn"><button class="btn btn-default" type="button" disabled><span class="glyphicon glyphicon-user"></span></button></span>
                   <input type="text" class="form-control" id="login_usr" [(ngModel)]="login_address">
@@ -34,9 +34,9 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
-            <h3 align="center"><strong>Generate account</strong></h3><hr>
             <div class="row">
               <div class="col-lg-12">
+                <h4><strong>Generate new account</strong></h4>
                 <div class="form-group input-group">
                   <span class="input-group-btn"><button class="btn btn-default generate-menu-label" type="button" disabled><strong>Seed</strong></button></span>
                   <input disabled class="form-control" id="new_seed" [(ngModel)]="generate_seed">
