--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,9 @@
+<!--LoginComponent: handles authorization and account generation-->
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
+      <!--Login menu-->
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
@@ -19,6 +21,7 @@
         </div>
       </div>
 
+      <!--Account generation menu-->
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
