--- a/src/app/explorer/explorer.component.html
+++ b/src/app/explorer/explorer.component.html
@@ -1,7 +1,9 @@
+<!--ExplorerComponent: handles the transparent functionality of viewing service data and address lookup-->
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2">
 
+      <!--Search field-->
       <div class="row">
         <div class="col-lg-12">
           <div class="form-group input-group">
@@ -11,12 +13,12 @@
         </div>
       </div>
 
+      <!--Recent events display-->
       <div class="row" *ngIf="address == null">
         <div class="col-lg-12">
           <h3>Recent events</h3>
-          <div class="tb">
-            <table class="table table-striped">
-              <thead>
+          <table class="table table-striped">
+            <thead>
               <tr>
                 <th scope="col">Event ID</th>
                 <th scope="col"></th>
@@ -24,8 +26,8 @@
                 <th scope="col">Event Type</th>
                 <th scope="col">Timestamp</th>
               </tr>
-              </thead>
-              <tbody>
+            </thead>
+            <tbody>
               <tr *ngFor="let event of recent_events">
                 <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
                 <td scope="row"><span class="glyphicon glyphicon-arrow-right"></span></td>
@@ -33,38 +35,39 @@
                 <td scope="row">{{event.event_type}}</td>
                 <td scope="row">{{event.timestamp}}</td>
               </tr>
-              </tbody>
-            </table>
-          </div>
+            </tbody>
+          </table>
         </div>
       </div>
 
+      <!--Recent agreement display-->
       <div class="row" *ngIf="address == null">
         <div class="col-lg-12">
           <h3>Recent agreements</h3>
-          <div class="tb">
-            <table class="table table-striped">
-              <thead>
+          <table class="table table-striped">
+            <thead>
               <tr>
                 <th scope="col">Agreement ID</th>
                 <th scope="col">State</th>
                 <th scope="col">Timestamp</th>
               </tr>
-              </thead>
-              <tbody>
+            </thead>
+            <tbody>
               <tr *ngFor="let agreement of recent_agreements">
                 <td scope="row"><a (click)="explore_address(agreement.agreement_id)">{{agreement.agreement_id}}</a></td>
                 <td scope="row">{{agreement.state}}</td>
                 <td scope="row">{{agreement.date_created}}</td>
               </tr>
-              </tbody>
-            </table>
-          </div>
+            </tbody>
+          </table>
         </div>
       </div>
 
+      <!--Address information display-->
       <div class="row">
         <div class="col-lg-12">
+
+          <!--If address exists-->
           <div *ngIf="address_type != null">
             <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}} </strong> <em *ngIf="address_type == 'EVENT'"><span class="glyphicon glyphicon-arrow-right"></span>
             <a (click)="explore_address(address_payload.payload.agreement_id)">0x{{address_payload.payload.agreement_id}}</a></em></h4>
@@ -72,32 +75,34 @@
             <pre>{{address_payload | json}}</pre>
             <div *ngIf="address_type == 'AGREEMENT'" style="margin-top: 20px">
               <h4><strong><span class="glyphicon glyphicon-list-alt"></span> Associated events</strong></h4>
-              <div class="tb">
-                <table class="table table-striped">
-                  <thead>
+              <table class="table table-striped">
+                <thead>
                   <tr>
                     <th scope="col">Event ID</th>
                     <th scope="col">Event Type</th>
                     <th scope="col">Timestamp</th>
                   </tr>
-                  </thead>
-                  <tbody>
+                </thead>
+                <tbody>
                   <tr *ngFor="let event of address_events">
                     <td scope="row"><a (click)="explore_address(event.event_id)">{{event.event_id}}</a></td>
                     <td scope="row">{{event.event_type}}</td>
                     <td scope="row">{{event.timestamp}}</td>
                   </tr>
-                  </tbody>
-                </table>
-              </div>
+                </tbody>
+              </table>
             </div>
           </div>
+
+          <!--If address is undefined-->
           <div *ngIf="address_type == null && address != null">
             <h4><strong><span class="glyphicon glyphicon-list-alt"></span> 0x{{address}}</strong></h4>
             <pre>"address_type": UNDEFINED</pre>
           </div>
+
         </div>
       </div>
+
     </div>
   </div>
 </div>
