--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,7 +1,9 @@
+<!--ItemComponent: handles item display and proposal creation-->
 <div class="container">
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
+      <!--Item title, creation details, picture and description-->
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
@@ -18,15 +20,18 @@
         </div>
       </div>
 
+      <!--Initial terms-->
       <div class="row">
         <div class="col-lg-12">
           <div class="alert alert-info">
             <h4><span class="glyphicon glyphicon-file"></span> <strong>Initial terms</strong></h4><hr>
             <div *ngFor="let terms of item_terms">
               <div *ngIf="terms.status === 'INITIAL'">
+
                 <p><span class="glyphicon glyphicon-user"></span> <strong>Seller account: </strong> {{item_agreement_params.seller_id}}</p>
                 <p><span class="glyphicon glyphicon-credit-card"></span> <strong>Initial price: </strong> {{terms.price}} SEK</p>
                 <p><span class="glyphicon glyphicon-transfer"></span> <strong>Postage due within: </strong> {{terms.postage_time}} hours</p>
+
                 <p> <span *ngIf="terms.accelerometer !== null" class="glyphicon glyphicon-ok"></span>
                   <span *ngIf="terms.accelerometer === null" class="glyphicon glyphicon-remove"></span>
                   <strong>Accelerometer</strong> <strong *ngIf="terms.accelerometer !== null">({{terms.accelerometer}} G)</strong></p>
@@ -43,19 +48,21 @@
                   <span *ngIf="terms.humidity_low === 0" class="glyphicon glyphicon-remove"></span>
                   <strong>GPS</strong>
                 </p>
+
               </div>
             </div>
           </div>
         </div>
       </div>
 
+      <!--Action buttons for viewing proposals and making a proposal-->
       <div class="row">
         <div class="col-lg-12">
           <div class="form-group">
             <button [disabled]="item_terms.length === 1" class="btn btn-primary form-control"  data-toggle="modal" data-target="#termsModal" [ngClass]="{'disabled': item_terms.length === 1}">View proposals <span class="label label-info">{{item_terms.length-1}}</span></button>
           </div>
           <div class="form-group">
-            <button [disabled]="item_agreement_params.seller_id == global.globalvars.account_logged_in || global.globalvars.account_logged_in == null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal" [ngClass]="{'disabled': item_agreement_params.seller_id == global.globalvars.account_logged_in || global.globalvars.account_logged_in == null}">Make a proposal</button>
+            <button *ngIf="item_agreement_params.seller_id != global.globalvars.account_logged_in && global.globalvars.account_logged_in != null" class="btn btn-primary form-control" data-toggle="modal" data-target="#proposalModal">Make a proposal</button>
           </div>
         </div>
       </div>
@@ -63,26 +70,33 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!--Proposal creation modal-->
 <div id="proposalModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
-    <!-- Modal content-->
     <div class="modal-content">
+
+      <!--Header-->
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title"><span class="glyphicon glyphicon-file"></span> Propose terms</h4>
       </div>
+
+      <!--Body-->
       <div class="modal-body">
+
+        <!--Identification number-->
         <div class="form-group">
           <label for="terms_id">Identification number</label>
           <input type="text" class="form-control" [(ngModel)]="terms_identification" id="terms_id" disabled>
         </div>
 
+        <!--Proposed price-->
         <div class="form-group">
           <label for="terms_price">Price</label>
           <input type="text" class="form-control" id="terms_price" [(ngModel)]="terms_item_price">
         </div>
 
+        <!--Postage deadline-->
         <div class="form-group">
           <label for="terms_postage">Postage due</label>
           <input type="text" class="form-control" id="terms_postage" [(ngModel)]="terms_item_postage">
@@ -90,6 +104,7 @@
 
         <hr>
 
+        <!--Accelerometer-->
         <div class="form-group">
           <button class="btn btn-primary sensor-select" (click)="terms_accelerometer=true" *ngIf="!terms_accelerometer">Include accelerometer</button>
           <div class="row" *ngIf="terms_accelerometer">
@@ -104,6 +119,8 @@
             </div>
           </div>
         </div>
+
+        <!--Pressure sensor-->
         <div class="form-group">
           <button class="btn btn-primary sensor-select" (click)="terms_pressure=true" *ngIf="!terms_pressure">Include pressure sensor</button>
           <div class="row" *ngIf="terms_pressure">
@@ -120,8 +137,9 @@
               </div>
             </div>
           </div>
-
         </div>
+
+        <!--Humidity sensor-->
         <div class="form-group">
           <button class="btn btn-primary sensor-select" (click)="terms_humidity=true" *ngIf="!terms_humidity">Include humidity sensor</button>
           <div class="row" *ngIf="terms_humidity">
@@ -138,8 +156,9 @@
               </div>
             </div>
           </div>
-
         </div>
+
+        <!--Temperature sensor-->
         <div class="form-group">
           <button class="btn btn-primary sensor-select" (click)="terms_temperature=true" *ngIf="!terms_temperature">Include temp sensor</button>
           <div class="row" *ngIf="terms_temperature">
@@ -155,13 +174,16 @@
               </div>
             </div>
           </div>
-
         </div>
+
+        <!--GPS sensor-->
         <div class="form-group">
           <button class="btn btn-primary sensor-select" (click)="terms_gps = true" *ngIf="!terms_gps">Include GPS sensor</button>
           <button class="btn btn-danger sensor-select" (click)="terms_gps = false" *ngIf="terms_gps">Exclude GPS sensor</button>
         </div>
       </div>
+
+      <!--Footer with buttons-->
       <div class="modal-footer">
         <button type="button" class="btn btn-success" (click)="proposeTerms()">Propose terms</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -170,16 +192,21 @@
   </div>
 </div>
 
-<!-- Modal -->
+<!--Terms display modal-->
 <div id="termsModal" class="modal fade" role="dialog">
   <div class="modal-dialog">
-    <!-- Modal content-->
     <div class="modal-content">
+
+      <!--Header-->
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Current proposals</h4>
       </div>
+
+      <!--Body-->
       <div class="modal-body">
+
+        <!--Proposal status selector-->
         <div class="form-group">
           <label for="proposal_states">Show proposals</label>
           <select class="form-control" id="proposal_states" [(ngModel)]="proposal_state_chosen">
@@ -187,6 +214,8 @@
             <option>DENIED</option>
           </select>
         </div>
+
+        <!--Proposal display-->
         <div *ngFor="let terms of item_terms">
           <div class="alert" [hidden]="terms.status != proposal_state_chosen" [ngClass]="{'alert-info': terms.status == 'PROPOSED', 'alert-danger': terms.status == 'DENIED'}">
             <h4><span class="glyphicon glyphicon-file"></span> <strong>Proposal #{{terms.terms_id}}</strong></h4>
@@ -213,9 +242,12 @@
           </div>
         </div>
       </div>
+
+      <!--Footer-->
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
     </div>
+
   </div>
 </div>
