--- a/src/app/item-browser/item-browser.component.html
+++ b/src/app/item-browser/item-browser.component.html
@@ -1,7 +1,9 @@
+<!--ItemBrowserComponent: handles item (advert) browsing-->
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-6 col-lg-offset-3">
 
+      <!--Search field-->
       <div class="row">
         <div class="col-lg-12">
           <div class="form-group input-group">
@@ -11,7 +13,8 @@
         </div>
       </div>
 
-      <div class="row" *ngFor="let item of itemdisplay">
+      <!--Item display-->
+      <div class="row" *ngFor="let item of item_display">
         <div class="col-lg-12">
           <div class="alert alert-info" style="cursor: pointer" (click)="agreementClick(item.agreement_id)">
             <div class="row">
