--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* Global stylesheet */
+
 .app_contents {
   position: absolute;
   top: 70px;
@@ -6,10 +7,6 @@
 
 h3 {
   margin-top: 5px;
-}
-
-.generate-menu-label {
-  width: 90px;
 }
 
 .alert {
@@ -34,12 +31,18 @@ agm-map {
   height: 300px;
 }
 
-/*Action buttons in AgreementComponent*/
+/*============================LoginComponent============================*/
+
+.generate-menu-label {
+  width: 90px;
+}
+
+/*============================AgreementComponent============================*/
 .action_but {
   width:49.5%;
 }
 
-/*============================ItemComponent=======================*/
+/*============================ItemComponent============================*/
 .disabled {
   background-color: grey;
 }
@@ -62,4 +65,10 @@ agm-map {
 
 #creation_details {
   margin-bottom: 40px;
+}
+
+/*============================ItemBrowserComponent============================*/
+.item_image {
+  max-width: 158px;
+  max-height: 118px;
 }
