--- a/src/styles.css
+++ b/src/styles.css
@@ -77,3 +77,13 @@ agm-map {
 .manage_button {
   width: 100%;
 }
+
+/*============================NewItemComponent============================*/
+#item_description {
+  resize: none;
+  height: 80px;
+}
+
+.sensor-select {
+  width: 100%;
+}
